# Ecovolt_telemetry_final

./: CMakeLists.txt  LICENSE  README.md  dashboard_080.py  maindata.py  partitions.csv  requirements.txt  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  idf_component.yml  main.cpp
main/libs/adc_reader/: adc_reader.cpp  adc_reader.h
main/libs/config/: config.cpp  config.h
main/libs/data_types/: data_types.cpp  data_types.h
main/libs/gps/: gps.cpp  gps.h
main/libs/mpu6050/: mpu6050.cpp  mpu6050.h
main/libs/mqtt_client/: my_mqtt_client.cpp  my_mqtt_client.h
main/libs/telemetry_data/: telemetry_data.cpp  telemetry_data.h
main/libs/telemetry_system/: telemetry_system.cpp  telemetry_system.h
main/libs/wifi_manager/: wifi_manager.cpp  wifi_manager.h
